--- a/TestTask.Tests/TestTask.Tests.csproj
+++ b/TestTask.Tests/TestTask.Tests.csproj
@@ -102,9 +102,9 @@
     <Compile Include="MessageLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SDK\Extensions\SyndicationItemCollectionExtensionsTest.cs" />
-    <Compile Include="SDK\Models\RSSAtomFeedCollectionTest.cs" />
-    <Compile Include="SDK\Models\RSSAtomFeedTest.cs" />
-    <Compile Include="SDK\Providers\RSSAtomProviderTest.cs" />
+    <Compile Include="SDK\Models\RSSAtomFeedTests.cs" />
+    <Compile Include="SDK\Models\RSSAtomItemTest.cs" />
+    <Compile Include="SDK\Providers\RSSAtomProviderTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
