--- a/TestTask.WebAPI/TestTask.WebAPI.csproj
+++ b/TestTask.WebAPI/TestTask.WebAPI.csproj
@@ -151,11 +151,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="App_Data\CacheFactory.cs" />
-    <Compile Include="App_Data\CacheDB.cs" />
-    <Compile Include="App_Data\EF\FeedContext.cs" />
-    <Compile Include="App_Data\EF\IFeedConfiguration.cs" />
-    <Compile Include="App_Data\EF\IItemConfiguration.cs" />
+    <Compile Include="App_Code\CacheFactory.cs" />
+    <Compile Include="App_Code\CacheDB.cs" />
+    <Compile Include="App_Code\EF\FeedContext.cs" />
+    <Compile Include="App_Code\EF\FeedsConfiguration.cs" />
+    <Compile Include="App_Code\EF\ItemsConfiguration.cs" />
+    <Compile Include="App_Code\EF\Model\IUser.cs" />
+    <Compile Include="App_Code\EF\Model\User.cs" />
+    <Compile Include="App_Code\EF\UsersConfiguration.cs" />
+    <Content Include="App_Code\Extensions\StringExtensions.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
